# chimera-robobs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: robobs-port-notes.md  stray-branch-audit.md
docs/plans/: deep-refactor.md
scripts/: migrate_legacy_config.py
src/chimera_robobs/: __init__.py
src/chimera_robobs/cli/: robobs.py
src/chimera_robobs/controllers/: robobs.py
src/chimera_robobs/scheduling/: dates.py  engine.py  machine.py  model.py  siteadapter.py
src/chimera_robobs/scheduling/algorithms/: __init__.py  base.py  extinctionmonitor.py  higher.py  recurrent.py  skyflat.py  timed.py  timesequence.py
tests/: fakes.py  test_cli_queue.py  test_controller.py  test_input_compat.py  test_packaging.py  test_scheduling_algorithms.py  test_scheduling_cli.py  test_scheduling_engine.py  test_scheduling_model.py  test_scheduling_process.py  test_skyflat.py
tests/data/: canonical_block.yaml  canonical_proj.yaml  etacar_pointings.csv  etacar_proj.yaml  kelt_proj.yaml  lna_block.yaml  splus_block.yaml
tests/integration/: fast_night.py  test_fast_night.py
