[project]
name = "chimera-robobs"
version = "2.0.0.dev0"
description = "Robotic observation scheduler (robobs) for the chimera observatory control system"
license = "GPL-2.0-or-later"
authors = [
    { name = "Tiago Ribeiro", email = "tribeiro@ufs.br" },
    { name = "William Schoenell", email = "wschoenell@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=6.1.3",
    "chimera",
    "numpy>=2.1",
    "pyyaml>=6.0.2",
    "sqlalchemy==1.4.*",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.14",
]

[project.scripts]
chimera-robobs = "chimera_robobs.cli.robobs:main"

[project.urls]
source = "https://github.com/astroufsc/chimera-robobs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera_robobs"]

[tool.uv.sources]
chimera = { path = "../chimera" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.ruff.lint]
select = ["N", "I", "UP", "F", "E4", "E7", "E9"]
